--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="container">
-    <form action="submit" class="form js-search">
+    <form action="submit" class="form js-form">
       <label>
         <input
           class="input-search"
@@ -36,6 +36,7 @@
       </label>
       <button>Search</button>
     </form>
+
     <span class="loader"></span>
 
     <ul class="gallery"></ul>
